# aiohttp-json-rpc

./: .coveragerc  .gitignore  .travis.yml  LICENSE.txt  MANIFEST.in  Makefile  README.md  README.rst  REQUIREMENTS.dev.txt  example.py  pytest.ini  setup.cfg  setup.py  tox.ini
aiohttp_json_rpc/: __init__.py  base.py  client.py  communicaton.py  decorators.py  django.py  exceptions.py  protocol.py  publish_subscribe.py  pytest.py  rpc.py  threading.py  websocket.py
aiohttp_json_rpc/auth/: __init__.py  django.py  passwd.py
aiohttp_json_rpc/django/: __init__.py  apps.py  utils.py
aiohttp_json_rpc/django/auth/: decorators.py
aiohttp_json_rpc/django/static/: rpc.js
aiohttp_json_rpc/django/utils/: query.py
dev-server/: dev-server  index.html
dev-server/static/: rpc.js
example/: REQUIREMENTS.txt  manage.py  server.py
example/example/: settings.py  urls.py
examples/: base_example.py  passwd_example.py  publish_subscribe_client.py  publish_subscribe_example.py  user.db
examples/django3_example_project/: Makefile  REQUIREMENTS.txt  manage.py  server.py
examples/django_example_project/: REQUIREMENTS.txt  manage.py  server.py
tests/: conftest.py  test_client.py  test_decorators.py  test_django_auth_backend.py  test_django_queries.py  test_django_transactions.py  test_errors.py  test_forms.py  test_message_decoding.py  test_method_api.py  test_method_args.py  test_method_kwargs.py  test_methods.py  test_publish_subscribe.py
tests/django_project/: setup.py
tests/py34/: test_env.py
tests/py35/: test_django_transactions.py  test_env.py
(+10 files in other folders)
