[metadata]
description = Implementation JSON-RPC 2.0 server and client using aiohttp on top of websockets transport
long_description = file: README.rst
keywords =
    aiohttp
    asyncio
    websockets
    json-rpc
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Internet :: WWW/HTTP
